--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
-    --primary-color: #fff;
-    --secondary-color: #d6d1ce;
-    --tertiary-color: #000;
+    --primary-color: #000;
+    --secondary-color: #fff;
+    --tertiary-color: #7a6685;
 }
 
 * {
@@ -11,13 +11,13 @@
 }
 
 body {
-    color: var(--tertiary-color);
-    font-family: Arial, Helvetica, sans-serif;
+    color: var(--primary-color);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 header {
     padding: 20px 35px;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -30,13 +30,13 @@ header {
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: var(--tertiary-color);
+    color: var(--secondary-color);
     margin: 0;
 }
 
 header a {
     text-decoration: none;
-    color: var(--tertiary-color);
+    color: var(--secondary-color);
 }
 
 header nav {
@@ -57,10 +57,28 @@ header nav ul li a {
     font-size: 2.5vw;
 }
 
-
-
 .hero {
     background-image: url(../assets/images/portfolio-hero.jpg);
+    background-size: cover;
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+    height: 350px;
+    background-position: bottom;
+}
+
+.hero-hook {
+    width: 50%;
+    text-align: left;
+    margin: 3.5%;
+    color: var(--primary-color);
+    font-size: 18px;
+    line-height: 1.5;
+    text-shadow: 2px 0px rgba(255, 255, 255, 25%);
+}
+
+.hero-hook p {
+    font-style: italic;
 }
 
 .site-img-1 {
