--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #000;
-    --secondary-color: #fff;
-    --tertiary-color: #7a6685;
+    --secondary-color: rgb(243, 236, 236);
+    --tertiary-color: #1d171b;
 }
 
 * {
@@ -11,13 +11,14 @@
 }
 
 body {
-    color: var(--primary-color);
+    color: var(--secondary-color);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: var(--tertiary-color);
 }
 
 header {
     padding: 20px 35px;
-    background-color: var(--primary-color);
+    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -68,17 +69,57 @@ header nav ul li a {
 }
 
 .hero-hook {
-    width: 50%;
+    width: 35%;
     text-align: left;
     margin: 3.5%;
     color: var(--primary-color);
-    font-size: 18px;
+    font-size: 17px;
     line-height: 1.5;
     text-shadow: 2px 0px rgba(255, 255, 255, 25%);
+    
+}
+
+.hero-hook h2 {
+    font-weight: bold;
+    margin-bottom: 8px;
 }
 
 .hero-hook p {
     font-style: italic;
+}
+
+.intro {
+    background-color: var(--tertiary-color);
+}
+
+.section-title {
+    color: var(--secondary-color);
+    font-size: 28px;
+    border-bottom: 2px solid rgba(248, 167, 85, 0.693);
+    padding: 30px 30px 10px 20px;
+    margin-top: 5px;
+    display: inline-flex
+}
+
+.intro-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.intro img {
+    width: 300px;
+    padding: 35px;
+    border-radius: 50%;
+    margin: 50px 50px 0 20px;
+}
+
+.intro-text {
+    flex: 1;
+    line-height: 1.7;
+    text-align: justify;
+    margin-right: 8%;
 }
 
 .site-img-1 {
