--- a/assets/style.css
+++ b/assets/style.css
@@ -73,14 +73,13 @@ header nav ul li a:hover {
 }
 
 .hero-hook {
-    width: 35%;
+    width: 450px;
     text-align: left;
     margin: 3.5%;
     color: var(--primary-color);
     font-size: 17px;
     line-height: 1.5;
     text-shadow: 2px 0px rgba(255, 255, 255, 25%);
-    
 }
 
 .hero-hook h2 {
@@ -116,16 +115,17 @@ header nav ul li a:hover {
     width: 300px;
     padding: 35px;
     border-radius: 50%;
-    margin: 50px 50px 0 20px;
+    margin: 50px 20px 0 20px;
 }
 
 .intro-text {
     flex: 1;
     line-height: 1.7;
     text-align: justify;
-    margin-right: 8%;
+    margin: 0 8%;
+    min-width: 300px;
+    
 }
-
 
 .site-other {
     display: flex;
@@ -149,8 +149,8 @@ header nav ul li a:hover {
 }
 
 .site-img img:hover {
-        opacity: 1;
-        background-color: rgba(248, 167, 85, 0.8);
+    opacity: 1;
+    background-color: rgba(248, 167, 85, 0.8);
 }
 
 .site-main {
@@ -188,10 +188,12 @@ header nav ul li a:hover {
 
 .contact-info ul {
     display: flex;
+    flex-wrap: wrap;
     list-style: none;
     justify-content: space-around;
-    margin: 20px 20px 40px 20px;
+    margin: 40px 20px 40px 20px;
     font-size: 18px;
+    line-height: 1.7;
 }
 
 .contact-info ul li a {
@@ -202,3 +204,101 @@ header nav ul li a:hover {
 .contact-info ul li a:hover {
     color:rgba(248, 167, 85, 0.8)
 }
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+        position: relative;
+    }
+
+    header h1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+
+    header nav ul li a {
+        font-size: 20px;
+    }
+
+    .hero-hook {
+        width: 350px;
+        font-size: 15px;
+        margin: 60px 0 0 60px;
+    }
+  }
+  
+  /* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 768px) {
+      .step h3 {
+          flex: 1 100%;
+          text-align: center;
+      }
+
+      .step-info {
+          flex: 2 100%;
+          text-align: center;
+          justify-content: center;
+      }
+
+      .step-img {
+          flex: 0 32%;
+          margin-right: 0;
+          margin-top: 15px;
+          margin-bottom: 15px;
+      }
+
+      .step-text {
+          flex: 100%;
+      }
+
+      .hero {
+          height: 300px;
+      }
+  }
+  
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+  @media screen and (max-width: 575px) {
+      
+    .hero {
+        justify-content: center;
+        height: 250px;
+    }
+
+    .hero-hook {
+          width: 300px;
+          text-align: center;
+          margin: 40px;
+      }
+
+      .section-title {
+          width: 95%;
+      }
+
+      .intro p {
+          width: 100%;
+      }
+
+      .trainer {
+          flex: 0 100%;
+      }
+
+      .contact-info {
+          text-align: center;
+      }
+
+      .contact-info > * {
+          flex: 0 100%;
+      }
+
+      .contact-form {
+          order: 3;
+      }
+  }
