--- a/assets/style.css
+++ b/assets/style.css
@@ -230,6 +230,9 @@ header nav ul li a:hover {
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
+    body {
+        font-size: smaller;
+    }
     header {
         padding-bottom: 0;
         justify-content: center;
@@ -253,8 +256,14 @@ header nav ul li a:hover {
 
     .hero-hook {
         width: 350px;
-        font-size: 19px;
+        font-size: 15px;
         margin: 60px 0 0 60px;
+    }
+    .site-title {
+        width: 175px;
+    }
+    .contact-info ul {
+        font-size: 17px;
     }
   }
   
